Added images to homepage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 <a name="dasftp" class="anchor" href="#dasftp"><span class="octicon octicon-link"></span></a>daSftp</h3>
 
 <p>Simple and small. Share your images to a site through sftp. </p>
-
+Screenshots:
+<img src="./images/home.png">
+Home
+<img src="./images/settings.png">
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
