--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h3>
 <a name="dasftp" class="anchor" href="#dasftp"><span class="octicon octicon-link"></span></a>daSftp</h3>
 
+
 <p>Simple and small. Share your images to a site through sftp. </p>
 Screenshots:
 <img src="./images/home.png">
@@ -42,7 +43,9 @@ Home
 <p>@olsdav</p>
       </section>
     </div>
+<a name="dasftp" class="anchor" href="#dasftp"><span class="octicon octicon-link"></span></a>Licenses</h3>
+    Apache or something... 
 
-    
+Uses Jcrafts jsch library which can be seen at http://www.jcraft.com/jsch/ With BSD license. Read at http://www.jcraft.com/jsch/LICENSE.txt
   </body>
 </html>
