--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@ Home
 
 <p>@olsdav</p>
       </section>
-    </div>
-<a name="dasftp" class="anchor" href="#dasftp"><span class="octicon octicon-link"></span></a>Licenses</h3>
+
+<a name="licenses" class="anchor" href="#licenses"><span class="octicon octicon-link"></span></a>Licenses</h3>
     Apache or something... 
 
 Uses Jcrafts jsch library which can be seen at http://www.jcraft.com/jsch/ With BSD license. Read at http://www.jcraft.com/jsch/LICENSE.txt
-  </body>
+  </div> 
+ </body>
 </html>
