--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ Home
 <p>@olsdav</p>
 
 <h3><a name="licenses" class="anchor" href="#licenses"><span class="octicon octicon-link"></span></a>Licenses</h3>
-    Apache or something... 
 
-Uses Jcrafts jsch library which can be seen at http://www.jcraft.com/jsch/ With BSD license. Read at http://www.jcraft.com/jsch/LICENSE.txt
+<p>
+Apache or something...
+Uses Jcrafts jsch library which can be seen at http://www.jcraft.com/jsch/ With BSD license. Read at http://www.jcraft.com/jsch/LICENSE.txt</p>
    </section>
   </div> 
  </body>
