Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Android-light-dasftp by davols</title>
+    <title>android-light-dasftp by davols</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Android-light-dasftp</h1>
+        <h1>android-light-dasftp</h1>
         <h2>Clean, small, simple share image to sftp site. </h2>
 
         <section id="downloads">
@@ -28,26 +28,41 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a name="dasftp" class="anchor" href="#dasftp"><span class="octicon octicon-link"></span></a>daSftp</h3>
+        <h1>
+<a name="android-light-dasftp" class="anchor" href="#android-light-dasftp"><span class="octicon octicon-link"></span></a>android-light-dasftp</h1>
 
+<p>Small simple upload picture to sftp server and give direct link in clipboard. Clean and light, just one key press (share and app)</p>
 
-<p>Simple and small. Share your images to a site through sftp. </p>
-Screenshots:
-<img src="./images/home.png">
-Home
-<img src="./images/settings.png">
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h2>
+<a name="todos" class="anchor" href="#todos"><span class="octicon octicon-link"></span></a>TODOs</h2>
 
-<p>@olsdav</p>
+<ul>
+<li>Home should link to shared pictures with thumbnail</li>
+<li>Being able to have several sites saved</li>
+<li>Error handling while uploading</li>
+<li>Icon</li>
+<li>Auto add tags such as '[img]' in clipboard</li>
+</ul><p>Question is how to make it as simple as possible but also user-friendly and how many functions that should be implemented</p>
 
-<h3><a name="licenses" class="anchor" href="#licenses"><span class="octicon octicon-link"></span></a>Licenses</h3>
+<h2>
+<a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots:</h2>
 
-<p>
-Apache or something...
-Uses Jcrafts jsch library which can be seen at http://www.jcraft.com/jsch/ With BSD license. Read at http://www.jcraft.com/jsch/LICENSE.txt</p>
-   </section>
-  </div> 
- </body>
+<p><img src="http://davols.github.io/android-light-dasftp/images/home.png" alt="Screenshot-home"><img src="http://davols.github.io/android-light-dasftp/images/settings.png" alt="Screenshot-settings"></p>
+
+<h2>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
+
+<p>@olsdav, <a href="https://github.com/bvb" class="user-mention">@bvb</a> (icon), jcraft (sftp library)  <a href="http://www.jcraft.com/jsch/">http://www.jcraft.com/jsch/</a></p>
+
+<h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License:</h2>
+
+<p>dasftp code is licensed under Apache v2 which can be seen at <a href="https://github.com/davols/android-light-dasftp/blob/master/LICENSE">https://github.com/davols/android-light-dasftp/blob/master/LICENSE</a> </p>
+
+<p>dasftp uses Jcraft's jsch library which has a BSD license. Copy of the license can be seen here: <a href="http://www.jcraft.com/jsch/LICENSE.txt">http://www.jcraft.com/jsch/LICENSE.txt</a> and project homepage: <a href="http://www.jcraft.com/jsch/">http://www.jcraft.com/jsch/</a></p>
+      </section>
+    </div>
+
+    
+  </body>
 </html>
