Links to contr.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
-<p>@olsdav, <a href="https://github.com/bvb" class="user-mention">@bvb</a> (icon), jcraft (sftp library)  <a href="http://www.jcraft.com/jsch/">http://www.jcraft.com/jsch/</a></p>
+<p><a href="https://github.com/davols" class="user-mention">@davols</a>, <a href="https://github.com/bleckfisk" class="user-mention">@bleckfisk</a> (icon), jcraft (sftp library)  <a href="http://www.jcraft.com/jsch/">http://www.jcraft.com/jsch/</a></p>
 
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License:</h2>
