Updated screenshots, added feature section and removed fixed todos

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 <p>Small simple upload picture to sftp server and give direct link in clipboard. Clean and light, just one key press (share and app)</p>
 
 <h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
+<ul>
+<li>Just share the app with daSftp for it to upload to selected sftp server</li>
+<li>Link in clipboard</li>
+<li>Customizable tags before added to clipboard</li>
+<li>Simple error handling</li>
+</ul><p>Not sure how advance error handling is needed</p>
+
+<h2>
 <a name="todos" class="anchor" href="#todos"><span class="octicon octicon-link"></span></a>TODOs</h2>
 
 <ul>
