Updated index.htm with features and todos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <li>Link in clipboard</li>
 <li>Customizable tags before added to clipboard</li>
 <li>Simple error handling</li>
-</ul>
+</ul><p>Last known error is shown in main screen.</p>
 
 <h2>
 <a name="todos" class="anchor" href="#todos"><span class="octicon octicon-link"></span></a>TODOs</h2>
@@ -49,7 +49,7 @@
 <li>Home should link to shared pictures with thumbnail</li>
 <li>Being able to have several sites saved</li>
 <li>Error handling while uploading</li>
-</ul><p>Question is how to make it as simple as possible but also user-friendly and how many functions that should be implemented</p>
+</ul><p>Question is how to make it as simple as possible but also user-friendly and how many functions that should be implemented. Not sure if more advanced error handling is needed.</p>
 
 <h2>
 <a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots:</h2>
