More screenshots and added those to index.html

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 <ul>
 <li>Home should link to shared pictures with thumbnail</li>
 <li>Being able to have several sites saved</li>
-<li>Error handling while uploading</li>
+<li>Prettier homescreen with failed reason</li>
 </ul><p>Question is how to make it as simple as possible but also user-friendly and how many functions that should be implemented. Not sure if more advanced error handling is needed.</p>
 
 <h2>
 <a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots:</h2>
 
-<p><img src="http://davols.github.io/android-light-dasftp/images/home.png" alt="Screenshot-home"><img src="http://davols.github.io/android-light-dasftp/images/settings.png" alt="Screenshot-settings"></p>
-
+<p><img src="http://davols.github.io/android-light-dasftp/images/home.png" alt="Screenshot-home"><img src="http://davols.github.io/android-light-dasftp/images/home_failed.png" alt="Screenshot-home_failed"></p>
+<p><img src="http://davols.github.io/android-light-dasftp/images/settings.png" alt="Screenshot-home"><img src="http://davols.github.io/android-light-dasftp/images/settings2.png" alt="Screenshot-settings2"></p>
 <h2>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h2>
 
