New features need to remove todos and update pictures

--- a/index.html
+++ b/index.html
@@ -40,15 +40,14 @@
 <li>Link in clipboard</li>
 <li>Customizable tags before added to clipboard</li>
 <li>Simple error handling</li>
+<li>List all uploads with thumbnails for later reference</li>
 </ul><p>Last known error is shown in main screen.</p>
 
 <h2>
 <a name="todos" class="anchor" href="#todos"><span class="octicon octicon-link"></span></a>TODOs</h2>
 
 <ul>
-<li>Home should link to shared pictures with thumbnail</li>
 <li>Being able to have several sites saved</li>
-<li>Prettier homescreen with failed reason</li>
 </ul><p>Question is how to make it as simple as possible but also user-friendly and how many functions that should be implemented. Not sure if more advanced error handling is needed.</p>
 
 <h2>
