--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 </ul><p>Last known error is shown in main screen.</p>
 
 <h2>
+<a name="todos" class="anchor" href="#todos"><span class="octicon octicon-link"></span></a>V1</h2>
+<p>
+V1Rc1 is available at <a href="http://davols.github.io/android-light-dasftp/dasftp-v1rc1.apk">http://davols.github.io/android-light-dasftp/dasftp-v1rc1.apk</a>
+</p>
+<h2>
 <a name="todos" class="anchor" href="#todos"><span class="octicon octicon-link"></span></a>TODOs</h2>
 
 <ul>
